[aliases]
release = sdist bdist_wheel
test = pytest

[wheel]
universal = 0

[metadata]
name = resiliencyvr
version = attr: resiliencyvr.__version__
author = Vertical Relevance
url = https://github.com/VerticalRelevance/resiliency-framework-code
description = Code for the Vertical Relevance Resiliency Framework   

[options]
packages = find:
install_requires =
    boto3
    chaostoolkit
    chaostoolkit-aws
    chaostoolkit-kubernetes

[options.packages.find]
exclude =
    lambda*